--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "library",
     "require-dev": {
         "phpunit/phpunit": "^10.4",
-        "codeigniter4/framework": "^4.4"
+        "codeigniter4/framework": "^4.4",
+        "midtrans/midtrans-php": "^2.5"
     },
     "license": "MIT",
     "autoload": {
